GearsetPOC/force-app/main/default/objects/Ticket_Sales_History__c/Ticket_Sales_History__c.object-meta.xml
<CustomObject>
    <label>Ticket Sales History</label>
    <nameField>
        <label>Ticket Sales History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ticket Sales Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>