GearsetPOC/force-app/main/default/objects/Ticket_Sales_History__c/fields/Carrier_Code__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Code__c</fullName>
    <description>Field to identify if this ticket concerns Blue or Red trains</description>
    <label>Carrier Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>