GearsetPOC/force-app/main/default/objects/Ticket_Sales_History__c/fields/Cin__c.field-meta.xml
<CustomField>
    <fullName>Cin__c</fullName>
    <description>A CIN (or a Loyalty Number) is a unique ID generated for each Eurostar member. This will be blank if the customer is not a loyalty member</description>
    <label>Cin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>