GearsetPOC/force-app/main/default/objects/Ticket_Sales_History__c/fields/Class_Of_Service__c.field-meta.xml
<CustomField>
    <fullName>Class_Of_Service__c</fullName>
    <description>Class of ticket e.g. First class</description>
    <label>Class Of Service</label>
    <length>50</length>
    <type>Text</type>
</CustomField>