GearsetPOC/force-app/main/default/objects/Ticket_Sales_History__c/fields/Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Rate__c</fullName>
    <description>The conversion rate used to calculate the payment amount in GBP if the customer paid for their booking using a different currency other than GBP e.g. USD or EUR. This will be “null” if the customer paid in GBP.</description>
    <label>Conversion Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>