GearsetPOC/force-app/main/default/objects/Ticket_Sales_History__c/fields/Depart_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Depart_DateTime__c</fullName>
    <description>Date and time of departure</description>
    <label>Depart DateTime</label>
    <type>DateTime</type>
</CustomField>