GearsetPOC/force-app/main/default/objects/Ticket_Sales_History__c/fields/DestinationUic__c.field-meta.xml
<CustomField>
    <fullName>DestinationUic__c</fullName>
    <description>Destination location code</description>
    <label>DestinationUic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>