GearsetPOC/force-app/main/default/objects/Ticket_Sales_History__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <description>The date the member has purchased the ticket or subscription</description>
    <label>Event Date</label>
    <type>DateTime</type>
</CustomField>