GearsetPOC/force-app/main/default/objects/Ticket_Sales_History__c/fields/Fbc__c.field-meta.xml
<CustomField>
    <fullName>Fbc__c</fullName>
    <description>Tariff code</description>
    <label>Fbc</label>
    <length>50</length>
    <type>Text</type>
</CustomField>