GearsetPOC/force-app/main/default/objects/Ticket_Sales_History__c/fields/MemberShip_Number__c.field-meta.xml
<CustomField>
    <fullName>MemberShip_Number__c</fullName>
    <label>MemberShip Number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>