GearsetPOC/force-app/main/default/objects/Ticket_Sales_History__c/fields/OriginUic__c.field-meta.xml
<CustomField>
    <fullName>OriginUic__c</fullName>
    <description>Departing location code</description>
    <label>OriginUic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>