GearsetPOC/force-app/main/default/objects/Ticket_Sales_History__c/fields/Passenger_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Last_Name__c</fullName>
    <description>Passenger’s last name. This will be used as part of the Name Matching rule as the passenger name must match the member’s name in Salesforce.</description>
    <label>Passenger Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>