GearsetPOC/force-app/main/default/objects/Ticket_Sales_History__c/fields/Passenger_Type__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Type__c</fullName>
    <description>A code identifying a category of ticket.</description>
    <label>Passenger Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>