GearsetPOC/force-app/main/default/objects/Ticket_Sales_History__c/fields/Payment_Currency_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Currency_Amount__c</fullName>
    <description>The amount paid by the customer in the currency shown in the paymentCurrencyCode field.</description>
    <label>Payment Currency Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>