GearsetPOC/force-app/main/default/objects/Ticket_Sales_History__c/fields/Payment_Types__c.field-meta.xml
<CustomField>
    <fullName>Payment_Types__c</fullName>
    <description>The payment type used by the customer to pay for their booking</description>
    <label>Payment Types</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>