GearsetPOC/force-app/main/default/objects/Ticket_Sales_History__c/fields/Pnr__c.field-meta.xml
<CustomField>
    <fullName>Pnr__c</fullName>
    <description>This is the booking reference</description>
    <label>Pnr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>