GearsetPOC/force-app/main/default/objects/Ticket_Sales_History__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>This will include tickets and subscriptions</description>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>