GearsetPOC/force-app/main/default/objects/Ticket_Sales_History__c/fields/Tcn__c.field-meta.xml
<CustomField>
    <fullName>Tcn__c</fullName>
    <description>This is the Ticket number</description>
    <label>Tcn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>