GearsetPOC/force-app/main/default/objects/Ticket_Sales_History__c/fields/Train_Number__c.field-meta.xml
<CustomField>
    <fullName>Train_Number__c</fullName>
    <description>The train number reserved for the member.</description>
    <label>Train Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>