GearsetPOC/force-app/main/default/objects/Ticket_Sales_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Tcn__c</columns>
    <columns>Pnr__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pnr__c</field>
        <operation>equals</operation>
        <value>3CVTTZ</value>
    </filters>
    <label>All</label>
</ListView>