GearsetPOC/force-app/main/default/objects/Ticket_Sales_History__c/listViews/Created_today.listView-meta.xml
<ListView>
    <fullName>Created_today</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created today</label>
</ListView>